--- a/base/monitoring/kustomization.yml
+++ b/base/monitoring/kustomization.yml
@@ -1,6 +1,7 @@
 resources:
 - grafana-svc.yml
 - logging-operator.yml
+- pod-security.yml
 - loki.yml
 - prometheus-operator.yml
 # logging operator default config, works good at least for inventory and promise-date
